  * Added icon property to M.MapMarkerView
  * Fixed initialText property of M.TextFieldView with input-type password (thx to amenon)
  * Improved debugging of M.Toolbar, regarding the anchorLocation property of the child views (thx to greylurk)
  * Fixed a bug in local storage provider (thx to amenon)
  * Updated Underscore to v1.3.1
  * Updated D8 library to 0.1.3

** Version 1.0 RC1 - Date 17.01.2011 **

  * Fixed a bug with sendNoCacheHeader property of M.Request
  * I18N not sets language to default language if the desired one is not available
  * Fixed a bug in M.Request concerning the internal callbacks
  * Added M.DataConsumer as a special data provider that only works as a source and in combination with the model's find()
  * Fixed a bug with textfields (date input), computed value and the datepicker
  * Updated Underscore to v1.3
  * Updated mobiscroll to 1.5.3
  * Fixed a bug with M.ScrollView and the clear button
  * Added disable()/enable() and clearValue() to M.SearchBarView
  * Added cssClass property to M.ListView
  * Added special behaviour for M.ButtonView inside of an M.ToggleView
  * Model: changed m_id from number to unique string (4 digits each can be one of 32 chars)
  * Model: deleted bulkImport method
  * Renamed getRecordForId() to getRecordById() (in M.RecordManager), the latter one is deprecated now
  * Deleted M.ModelRegistry
  * Deleted M.DataProviderCouchDB
  * Deleted M.DataProviderWebSQL
  * Method find() in DataProviderLocalStorage now takes an object for query
  * Added "include" operator (for strings) for LS find query
  * Changed version to 1.0RC1


** Version 0.8 - Date 05.12.2011 **

  * Fixed a typo bug in M.Request
  * Added M.CanvasView
  * Added numberOfChars property to M.TextField (equivalent to HTML's maxlength property)
  * Fixed a UTF8 bug in M.ListView
  * Added M.TextFieldView to supported views within a list item view.
  * Removed deprecated useTransitions property of M.Application (use getConfig() instead)