@@ -7,6 +7,7 @@
   * Fixed a bug in local storage provider (thx to amenon)
   * Updated Underscore to v1.3.1
   * Updated D8 library to 0.1.3
+  * Fixed a bug with native date picker and M.TextFieldView (update value on lostFocus event)
 
 ** Version 1.0 RC1 - Date 17.01.2011 **
 
